modificacion de proyecto

--- a/pug/header.pug
+++ b/pug/header.pug
@@ -1,12 +1,16 @@
-header.header 
-    a.header-logo nevyn 
+header.header
+    div.header-logo 
+        img(src="/assets/icon/scala.png", alt="logo tornado.icon")
+        p nevyn 
     nav.navbar 
-        button.nav-btn
-            img(src="assets/icon/menu.svg", alt="")
-        ul.contend-nav
-            li.nav-item 
-                a(href="#") Proyecto Hobie 
-            li.nav-item 
-                a(href="#") Contacto
-            li.nav-item 
-                a(href="#") Proyectos
+        ul 
+            li.navbar-item
+                a(href="#about-me") 
+                    img(src="/assets/icon/usuario.png", alt="icon aboutme")
+            li.navbar-item
+                a(href="#proyect") 
+                    img(src="/assets/icon/carpeta.png", alt="icon proyects")
+            li.navbar-item
+                a(href="#contact") 
+                    img(src="/assets/icon/sobre.png", alt="icon conctact")
+            
