--- a/index.pug
+++ b/index.pug
@@ -4,10 +4,13 @@ html(lang="es")
         meta(charset="utf-8")
         meta( name="viewport" content="width=device, initial-sacale=1")
         title nevyn
-        link(rel="icon", type="imgen/png", href="assets/icon/icon.png")
-        link(rel="stylesheet", href="styles/index.css")
+        link(rel="icon", type="imgen/png", href="assets/icon/scala.png")
+        link(rel="stylesheet", href="index.css")
+        link(rel="preconnect" href="https://fonts.googleapis.com")
+        link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+        link(href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&display=swap" rel="stylesheet")
+
     body
         include pug/header.pug
-        include pug/aboutme.pug
-        include pug/proyects.pug
-        include pug/footer.pug
+        include pug/main.pug
+        include pug/proyect.pug
