--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,13 @@
-.header {
-  padding: 2rem 10vw;
+header {
+  position: relative;
+}
+header-logo {
+  width: 1vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 40px;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
