--- a/index.pug
+++ b/index.pug
@@ -14,3 +14,6 @@ html(lang="es")
         include pug/header.pug
         include pug/main.pug
         include pug/proyect.pug
+        include pug/contact.pug
+        include pug/footer.pug
+        
