--- a/pug/header.pug
+++ b/pug/header.pug
@@ -5,7 +5,7 @@ header.header
     nav.navbar 
         ul 
             li.navbar-item
-                a(href="#about-me") 
+                a(href="#aboutMe") 
                     img(src="/assets/icon/usuario.png", alt="icon aboutme")
             li.navbar-item
                 a(href="#proyect") 
