--- a/pug/main.pug
+++ b/pug/main.pug
@@ -1,6 +1,7 @@
-section.main
+section.main#aboutMe
     article.main-article 
-        h1 HEY, WELLCOME
-        p Lorem, ipsum dolor sit amet consectetur adipisicing elit. In tempore quae voluptas velit accusamus asperiores molestiae fuga excepturi accusantium consectetur numquam perferendis error nemo architecto, assumenda eaque vero molestias. Nostrum.e
+        h1 HEY, BIENVENIDO
+        p hola me llamo Yusbel, con una terible curiosidad descubri mi intensa facinacion sobre la tecnologuia me encanta compartir siempre que puede mis mis conocimiento y habilidades a todo el mundo. 
+        p Hoy mas que todo la tecnologuia nos rodea alli por donde vemos, dentro de eso vi mi oportunindad de aprender crear y mejorar las herramientas de la actualidad.
     div.main-img
         img(src="/assets/img/yusbelimg.png", alt="")
