--- a/index.less
+++ b/index.less
@@ -15,6 +15,11 @@
 html{
     font-size:62% ;
 }
-
+body{
+    background: @color-letter;
+}
 @import "styles/header.less";
 @import "styles/main.less";
+@import "styles/proyect.less";
+@import "styles/contact.less";
+@import "styles/footer.less";
