--- a/pug/proyect.pug
+++ b/pug/proyect.pug
@@ -1,7 +1,8 @@
-section.proyect 
+section.proyect#proyect
     h2 PROYECTOS
     .proyect-carrusel 
-        aside.proyect-item.batatabit
+        aside.proyect-carrusel-item.batatabit
+            a(href="/proyectos/batatabit/index.html")
             img(src="/assets/img/landypage.jpg", alt="")
             h3 Batata-bit
             p this is my first proyect, ultimos combios fueron agragados con nuevos componentes,
